# LogicGateSimulator

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
libs/Elements/: CMakeLists.txt  DCPower.cpp  DCPower.h  Element.cpp  Element.h  ElementType.h  Ground.cpp  Ground.h  LED.cpp  LED.h  LoadElement.h  Pin.h  PowerElement.h  Wire.cpp  Wire.h
libs/MyLib/: CMakeLists.txt
libs/WindowManagement/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
libs/WindowManagement/LanguageManager/: EnglishLang.h  LangManager.h  Language.h  UkrainianLang.h
libs/WindowManagement/SaveManager/: SaveManager.cpp  SaveManager.h
libs/WindowManagement/Windows/: Constructor.cpp  Constructor.h  ConstructorScheme.cpp  ConstructorScheme.h  EducationalSection.cpp  EducationalSection.h  Lesson.cpp  Lesson.h  LessonConstructor.cpp  LessonConstructor.h  MainMenu.cpp  MainMenu.h  Settings.cpp  Settings.h  TopicsPage.cpp  TopicsPage.h
libs/WindowManagement/Windows/Settings/: InterfaceSettings.cpp  InterfaceSettings.h
locales/: English.json  Ukrainian.json
resources/configs/: config.ini
resources/lessons/: lesson1.md
src/: LangInit.h  main.cpp
